<resources>
    <string name="app_name">Country Flags</string>
    <string name="bg_header_text">Guess the Country Flag!</string>
    <string name="card_header_text">Welcome</string>
    <string name="card_subheader_text">Please enter your name.</string>
    <string name="input_default_value">Name</string>
    <string name="start_button_text">Start</string>
    <string name="landing_input_helper_text">e.g. John</string>
    <string name="quiz_submit_button_text">Submit</string>
    <string name="finish_button_text">Finish</string>
    <string name="result_score">Your Score is %1$d out of %2$d!</string>
    <string name="progress">%d / %d</string>
    <string name="result_name">Andrey</string>
    <string name="result_congrats_success">Hey, Congratulations!</string>
    <string name="result_congrats_failure">Better luck next time!</string>
    <string name="result_header">Result</string>
    <string name="question">What country does this flag belong to?</string>
    <string name="flag_image_content_description">Flag image</string>
    <string name="congrats_image_content_description">Congrats image</string>
</resources>