<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/curve_line"
    android:orientation="vertical"
    tools:context=".ui.result.ResultFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_header_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:gravity="center"
            android:text="@string/result_header"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/iv_result_cup_image"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginVertical="8dp"
            app:srcCompat="@drawable/ic_trophy"
            android:contentDescription="@string/congrats_image_content_description" />

        <TextView
            android:id="@+id/tv_result_congrats_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:gravity="center"
            android:text="@string/result_congrats"
            android:textColor="@color/white"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/tv_result_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:gravity="center"
            android:text="@string/result_name"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tv_result_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:gravity="center"
            android:text="@string/result_score"
            android:textColor="@color/grey"
            android:textSize="20sp" />

        <Button
            android:id="@+id/finish_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="26dp"
            android:layout_marginVertical="8dp"
            android:background="@drawable/default_button_bg_normal"
            android:text="@string/finish_button_text"
            android:textColor="@color/dark_blue"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@null" />
    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>